--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "Communis UI",
+  "name": "Communis-UI",
   "version": "1.1.0",
   "private": false,
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
