--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "d3-geo": "^1.11.3",
     "faker": "^4.1.0",
     "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
