Update commit hook script

--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick"
+      "pre-commit": "pretty-quick --staged"
     }
   },
   "browserslist": [
